Upgrade to 1.20.6 - Forge version upgrade to 50.0.31 - Configure Access Transformers (new file: accesstransformer.cfg) - Reorganised some files, created subpackages for grouping folders that are growing quickly - New unused java classes that were helpful to debug the upgrade process; leaving them in the repository for future reference and potential use later. These include:   - ModArmorMaterial   - AdaptorArmorMaterial   - IArmorMaterial   - ModRegistries - Switched block entities to use useWithoutItem instead of use - Added block entity classes; these are templates, but may be useful later:   - ClayMolderBlockEntity   - CrusherBlockEntity - New ComponentCollection class, groups components by their material. Also updated DataGenerators.populateEnums to populate this class. - New helper methods, maps in EquipmentCollection - New TierNumerics class, which provides all numerical values for tooling, armor - Deleted some util classes which have been re-inserted into forge:   - DatapackBuiltinEntriesProvider   - RegistryPatchGenerator   - RegistrySetBuilder - New items:   - fasteners   - mechanism_pieces   - mold_arrow_heads   - mold_axe_part   - mold_beam   - mold_body   - mold_disk   - mold_fasteners   - mold_flat_panel   - mold_hoe_part   - mold_mechanism_pieces   - mold_pickaxe_part   - mold_rod   - mold_round_panel   - mold_sword_parts   - - Updated LootModifier classes to use MapCodec instead of Codec - New animal armor and material system. New ModAnimalArmorItem class, which handles the change to entity texture layers. New ModArmorLayer class, which handles the change to armor texture layers. Rebuilt ModArmorMaterials class, which handles registering new ArmorMaterials. ModHorseArmorItem is now defunct. - New registration system for armor and tools, using the new material system. - Rebuilt ModToolTiers to use TierNumerics and the new material system. - New ModRecipeProvider.makeToolRecipes tool recipe builder method. - New tags:   - IS_A_MOLD   - NEEDS_GOD_TOOL - U